--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>🎈 Balloon Pop Adventure 🎈</title>
     <style>
         body {
-            background: url('sky_c.jpg') no-repeat center center/cover;
+            background: url('assets/sky_c.jpg') no-repeat center center/cover;
             font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
             overflow: hidden;
