--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     <button id="start">🎮 Start Game</button>
     <button id="reset" disabled>🔄 Reset Game</button>
 </div>
-<footer style="position: fixed; bottom: 7px; width: 100%; text-align: center; font-size: 14px; color: #ff4081;">Made with 🩷 by <a href="https://github.com/Careless-Caramel" target="_blank">Anna Elizabeth Thambi</a>
+<footer style="position: fixed; bottom: 7px; width: 100%; text-align: center; font-size: 14px; color: #ff4081;">
+    Made with 🩷 by 
+    <a href="https://github.com/Careless-Caramel" target="_blank" style="color: #ff4081;">Anna Elizabeth Thambi</a>
 </footer>
 
 <script>
